--- a/b2call/composer.json
+++ b/b2call/composer.json
@@ -10,6 +10,7 @@
         "doctrine/annotations": "^1.13",
         "doctrine/dbal": "^3.2",
         "doctrine/doctrine-bundle": "^2.1",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11.0",
         "nelmio/api-doc-bundle": "^4.8",
         "sensio/framework-extra-bundle": "^6.2",
@@ -22,6 +23,7 @@
         "symfony/framework-bundle": "6.0.*",
         "symfony/maker-bundle": "^1.38",
         "symfony/runtime": "6.0.*",
+        "symfony/security-bundle": "6.0.*",
         "symfony/security-csrf": "6.0.*",
         "symfony/serializer": "*",
         "symfony/twig-bundle": "*",
