--- a/b2call/config/packages/security.yaml
+++ b/b2call/config/packages/security.yaml
@@ -11,7 +11,7 @@ security:
         app_user_provider:
             entity:
                 class: App\Entity\Client
-                property: email
+                property: mail
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -19,6 +19,8 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            custom_authenticators:
+                - App\Security\ApiKeyAuthenticator
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
@@ -28,4 +30,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-#         - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/api/doc, roles: PUBLIC_ACCESS }
+         - { path: ^/api/login, roles: PUBLIC_ACCESS }
+         - { path: ^/api/*, roles: ROLE_USER }
